--- a/ui/interfaz.ui
+++ b/ui/interfaz.ui
@@ -6,12 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1195</width>
-    <height>829</height>
+    <width>1226</width>
+    <height>830</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Sistema Gestion Estudiantil Andres Bello</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../../../../Desktop/Proyecto Andres Bello/Aplicacion V2.1-AndresBello/Qss/icons/_icons.qrc">
+    <normaloff>:/feather/icons/feather/grid.png</normaloff>:/feather/icons/feather/grid.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
@@ -463,6 +473,28 @@
                  <width>32</width>
                  <height>32</height>
                 </size>
+               </property>
+              </widget>
+             </item>
+             <item alignment="Qt::AlignLeft">
+              <widget class="QFrame" name="frame_21">
+               <property name="minimumSize">
+                <size>
+                 <width>10</width>
+                 <height>10</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>10</width>
+                 <height>10</height>
+                </size>
+               </property>
+               <property name="frameShape">
+                <enum>QFrame::StyledPanel</enum>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Raised</enum>
                </property>
               </widget>
              </item>
